# notes-api

./: constants.py  main.py  pyproject.toml  schema.py  utils.py
